# semanticswap

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  Dockerfile  README.md  config.docker.yaml  config.server.example.yaml  config.yaml  pyproject.toml
docs/: architektur.md  quickstart-docker.md
docs/adr/: ADR-000-adr-prozess.md  ADR-001-python-fastapi.md  ADR-002-nur-modus-b-im-mvp.md  ADR-003-session-prefix-hash-kette.md  ADR-004-sqlite-storage-pluggable-vector.md  ADR-005-litellm-provider-abstraktion.md  ADR-006-headless-core-optionale-gui.md  ADR-007-teststrategie-iterationsschleifen.md  ADR-008-swap-in-retrieval-v1.md  ADR-009-forks-teilen-semantischen-speicher.md  ADR-010-active-memory-retrieval.md  ADR-011-semantischer-garbage-collector.md  ADR-012-event-bus-live-observability.md  ADR-013-externe-benchmarks.md  ADR-014-auth-v2.md
docs/eval/: 2026-07-15-ollama-qwen9b-8topics.md  experiment-protokoll.md  longmemeval-pilot-2026-07-19.md  tuning-cookbook.md
src/semanticswap/: __init__.py  auth.py  config.py  events.py  gateway.py  gui.py  llm.py  main.py  monitor.py  prompts.py  tokens.py
tests/: conftest.py
tests/eval/: test_eval_smoke.py
tests/integration/: test_active_retrieval.py  test_auth.py  test_flow_events.py  test_gateway.py  test_gui.py
tests/unit/: test_access_log.py  test_auth_device.py  test_cross_encoder.py  test_entity_resolution.py  test_events.py  test_garbage_collector.py  test_graph_expansion.py  test_hybrid_search.py  test_longmemeval.py  test_monitor_tokens.py  test_pipeline.py  test_profile_memory.py  test_query_decompose.py  (+8 more)
(+15 files in other folders)
