[project]
name = "semanticswap"
version = "0.1.0"
description = "Memory-Optimized Inference Proxy - komprimiert LLM-Kontext dynamisch und lagert ihn in einen semantischen Speicher aus"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "litellm>=1.40",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# Optional: Cross-Encoder-Re-Ranker (ONNX via fastembed, Apache-2.0, kein
# PyTorch). Nur nötig, wenn retrieval.rerank + rerank_backend=cross_encoder.
# Basis-Install bleibt ohne dieses Gewicht schlank.
rerank = [
    "fastembed>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
